deploy/ocp/lls_deployment_without_operator.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: lsd-llama-milvus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama-stack
      app.kubernetes.io/instance: lsd-llama-milvus
  template:
    metadata:
      labels:
        app: llama-stack
        app.kubernetes.io/instance: lsd-llama-milvus
    spec:
      volumes:
        - name: lls-storage
          persistentVolumeClaim:
            claimName: lsd-llama-milvus-pvc
      containers:
        - resources:
            limits:
              cpu: '2'
              memory: 12Gi
            requests:
              cpu: 250m
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          name: llama-stack
          ports:
            - containerPort: 8321
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: lls-storage
              mountPath: /opt/app-root/src/.llama
          terminationMessagePolicy: File
          image: 'quay.io/opendatahub/llama-stack:odh'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
