deploy/ocp/lls_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: lls
spec:
  path: /
  to:
    kind: Service
    name: lsd-llama-milvus-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
